<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/app_name"/>

    <item android:title="@string/celebrations">
        <menu>
            <item
                android:id="@+id/menu_pick_date"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/please_pic_date"/>

            <item
                android:id="@+id/menu_list_all"
                android:icon="@drawable/ic_list_black_24dp"
                android:title="@string/list_all_celebrations"/>

            <item
                android:id="@+id/menu_report"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/report_an_error"/>

        </menu>
    </item>

    <item android:title="@string/application">

        <menu>

            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings_applications_black_24dp"
                android:title="@string/preference"/>

            <item
                android:id="@+id/menu_google_play"
                android:icon="@drawable/ic_stars_black_24dp"
                android:title="@string/rate_the_app"/>

            <item
                android:id="@+id/menu_info"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about"/>
        </menu>

    </item>

</menu>