<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <import type="com.journeemondialelib.WorldCelebration" />
        <import type="android.databinding.ObservableField" />
        <import type="org.joda.time.MonthDay" />

        <variable name="handler" type="packi.day.ui.fragments.FocusCelebrationFragment"/>
        <variable name="date" type="ObservableField&lt;MonthDay&gt;"/>
        <variable name="loader" type="WorldCelebration"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/DateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/title"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                app:showDate="@{date}"
                tools:text="@string/today"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                />
        <View
            android:background="@color/text"
            android:id="@+id/view"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/DateTextView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/celebration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TODO"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text"
                tools:text="@string/app_name"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/view"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/random_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/random_day"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/random"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/celebration"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:id="@+id/image_celebration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/description_content"
                android:src="@drawable/vide"
                android:layout_weight="0.08"
                app:layout_constraintTop_toBottomOf="@+id/random_button"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="false"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                app:layout_constraintVertical_bias="0.100000024"
                android:layout_marginTop="8dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_view"
            app:elevation="5dp"
            app:layout_anchorGravity="bottom|right|end"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>


    </android.support.constraint.ConstraintLayout>

</layout>